--- a/index.html
+++ b/index.html
@@ -1,8 +1,11 @@
-<html>
-<title>Pokemon API for Grant Shoop</title>
-<head></head>
-<main></main>
-
-
-<footer></footer>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Pokemon API Site | GSWebDev</title>
+</head>
+<body>
+    
+</body>
 </html>
