--- a/index.html
+++ b/index.html
@@ -4,17 +4,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Pokemon API Site | GSWebDev</title>
-    <link href="style.css" rel="spreadsheet">
+    <link rel="stylesheet" href="style.css"/>
 </head>
 <body>
 <h1>Welcome To the Pokedex</h1>
 <div id="container">
 
+    
 </div>
 
 
 <script type="module" src="main.js"></script>
-
+<script type="text/javascript"></script>
     
 </body>
 </html>
