append code adjustment

--- a/index.html
+++ b/index.html
@@ -8,10 +8,7 @@
 </head>
 <body>
 <h1>Welcome To the Pokedex</h1>
-<div id="container">
-
-    
-</div>
+<div id="container"></div>
 
 
 <script type="module" src="main.js"></script>
