add animate css and made css adjustments

--- a/index.html
+++ b/index.html
@@ -5,14 +5,37 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Pokemon API Site | GSWebDev</title>
     <link rel="stylesheet" href="style.css"/>
+    <link rel="stylesheet" href="animate.css"/>
 </head>
+<header>
+    <figure class="photo animated flip">
+        <img src="assets/International_Pokémon_logo.svg.png">
+    </figure>
+</header>
 <body>
-<h1>Welcome To the Pokedex</h1>
+<h1>API</h1>
 <div id="container"></div>
+
+<div class="vid1">
+<iframe width="560" height="315" src="" frameborder="0" allow="accelerometer; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> 
+ </div>
+
+ <center>
+ <div class="video-responsive">
+        <iframe class="pokevideo" width="925" height="315" src="https://www.youtube.com/embed/bGPDGk-046Q?rel=0&amp;autoplay=1&amp;controls=1&amp;showinfo=0" frameborder="0" allowfullscreen></iframe>
+
+</div>
+</center>
 
 
 <script type="module" src="main.js"></script>
 <script type="text/javascript"></script>
     
 </body>
+
+
+<footer>
+        &copy;<a href="https://youthful-morse-797bcf.netlify.com/" target="_blank"> GSWebDev2018 </a>
+       
+       </footer>
 </html>
