--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
 <h1>API</h1>
 <div id="container"></div>
 
+<button id="createCard">Create Your Card</button>
+
 <div class="vid1">
 <iframe width="560" height="315" src="" frameborder="0" allow="accelerometer; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> 
  </div>
